--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                 <div class="infos row" data-aos="fade-up" data-aos-delay="100">
                     <div class=" col-lg-6">
                         <div class="shadow text-center mb-4 pt-3 pb-3">
-                            <i class="bx bx-map"></i>
+                            <p><i class="fas fa-map-marker-alt"></i></p>
                             <h5>Our Address</h5>
                             <p>45, Boulevard Hassan II casablanca</p>
                         </div>
@@ -559,14 +559,14 @@
 
                     <div class=" col-lg-3 col-md-6">
                         <div class="shadow text-center mb-4 pt-3 pb-3">
-                            <i class="bx bx-envelope"></i>
+                            <p><i class="fas fa-at"></i></p>
                             <h5>Email Us</h5>
                             <p>Obayid@company.com</p>
                         </div>
                     </div>
                     <div class=" col-lg-3 col-md-6">
                         <div class="shadow text-center mb-4 pt-3 pb-3">
-                            <i class="bx bx-phone-call"></i>
+                            <p><i class="fas fa-phone-alt"></i></p>
                             <h5>Call Us</h5>
                             <p>+212 555 511 111</p>
                         </div>
@@ -576,24 +576,28 @@
                     <div class="col-lg-6">
                         <form class="shadow col-12 pt-4 pt-4 mb-3" name="contact" action="public/php/mail.php" method="post">
                             <div class="form-row">
-                                <div class="col-md-6 form-group">
+                                <div class="input-icons col-md-6 form-group">
+                                    <i class="far fa-user"></i>
                                     <input type="text" name="name" class="form-control name" id="name" placeholder="Your Name" />
                                 </div>
-                                <div class="col-md-6 form-group">
+                                <div class="input-icons col-md-6 form-group">
+                                    <i class="far fa-envelope"></i>
                                     <input type="email" class="form-control email" name="email" id="email" placeholder="Your Email" />
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <div class="input-icons form-group">
+                                <i class="far fa-file-alt"></i>
                                 <input type="text" class="form-control subject" name="subject" id="subject" placeholder="Subject" />
                             </div>
                             <div class="form-group">
                                 <textarea class="form-control message" name="message" id="message" rows="7" placeholder="Your Message"></textarea>
                             </div>
                             <div class="text-center"><button type="submit">Send Message</button></div>
+                            <div class="message-submit"></div>
                         </form>
                     </div>
                     <div class=" col-lg-6 ">
-                        <iframe class="mb-4 mb-lg-0" src="https://maps.google.com/maps?q=45,%20Boulevard%20Hassan%20II%20casablanca&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+                        <iframe class="shadow mb-4 mb-lg-0" src="https://maps.google.com/maps?q=45,%20Boulevard%20Hassan%20II%20casablanca&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
                     </div>
 
                 </div>
