--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
                     <div class="row col-lg-6 col-md-12 col-sm-12">
 
                         <div class=" card-body col-12">
-                            <div class=" h4 mt-0 title">About</div>
+                            <div class=" h4 mt-0 title"><strong>About</strong></div>
                             <p class="text-height-3">Hello! I am Oumaima El Obayid. Front End Developer, I’m a Front End Developer. I have a Passion for Creating Clean, Beautiful, Interactive, Minimalistic, Responsive and User Friendly UI, Developed by Modular, Scalable and Functional
                                 Code.
                             </p>
                         </div>
                         <div class="card-body col-12 ">
-                            <div class="h4 mt-0 title">Basic Information</div>
+                            <div class="h4 mt-0 title"><strong>Basic Information</strong></div>
                             <div class="row p">
                                 <div class="col-sm-4"><strong class="text-uppercase">Name:</strong></div>
                                 <div class="col-sm-8">Oumaima El Obayid</div>
@@ -190,7 +190,7 @@
         <!-- pour ajouter, supprimer ou modifier un skills ici, vous devez le faire aussi dans le fichier _skills.scss et le fichier main.js partie skills -->
         <section class="section" id="skills">
 
-            <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
+            <div class="h4 text-center mb-4 title mt-4"><strong>Professional Skills</strong></div>
             <div class="container card ">
                 <div class="flexrow justify-content-center  container-skills" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                     <ul class="skills-bar-container col-lg-6 col-md-6 col-sm-12">
@@ -296,7 +296,7 @@
 
         <!-- ======= Portfolio Section ======= -->
         <section class="section  portfolio lightbox" id="portfolio">
-            <div class="h4 text-center mb-4 title mt-4">Portfolio</div>
+            <div class="h4 text-center mb-4 title mt-4"><strong>Portfolio</strong></div>
             <div class="container card">
                 <div class="mt-4 row" data-aos="fade-in">
                     <div class="col-lg-12 d-flex justify-content-center">
@@ -416,7 +416,7 @@
 
         <!-- ======= experiences Section ======= -->
         <section class=" section" id="experiences">
-            <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
+            <div class="h4 text-center mb-4 title mt-4 "><strong>Work Experience</strong></div>
             <div class="container ">
                 <div class=" mb-4 exper">
                     <div class="row">
@@ -479,7 +479,7 @@
 
         <!-- ======= Testimonials Section ======= -->
         <section class=" section testimonials section-bg" id="testimonials">
-            <div class="h4 text-center mb-4 title mt-4 ">Testimonials</div>
+            <div class="h4 text-center mb-4 title mt-4 "><strong>Testimonials</strong></div>
             <div class="container card ">
                 <div class="text-center mt-3" data-aos="fade-in" data-aos-delay="100">
                     <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
@@ -541,7 +541,7 @@
 
         <!-- ======= contact Section ======= -->
         <section class=" section contact section-bg" id="contact">
-            <div class="h4 text-center mb-4 title mt-4 ">Let's Get In Touch
+            <div class="h4 text-center mb-4 title mt-4 "><strong>Let's Get In Touch</strong>
             </div>
             <div class="container card pb-4">
                 <div class="section-title mt-3 text-center" data-aos="fade-in" data-aos-delay="100">
@@ -552,7 +552,7 @@
                     <div class=" col-lg-6">
                         <div class="shadow text-center mb-4 pt-3 pb-3">
                             <p><i class="fas fa-map-marker-alt"></i></p>
-                            <h5>Our Address</h5>
+                            <h5><strong> Address</strong></h5>
                             <p>45, Boulevard Hassan II casablanca</p>
                         </div>
                     </div>
@@ -560,14 +560,14 @@
                     <div class=" col-lg-3 col-md-6">
                         <div class="shadow text-center mb-4 pt-3 pb-3">
                             <p><i class="fas fa-at"></i></p>
-                            <h5>Email Us</h5>
+                            <h5><strong>Email Us</strong></h5>
                             <p>Obayid@company.com</p>
                         </div>
                     </div>
                     <div class=" col-lg-3 col-md-6">
                         <div class="shadow text-center mb-4 pt-3 pb-3">
                             <p><i class="fas fa-phone-alt"></i></p>
-                            <h5>Call Us</h5>
+                            <h5><strong>Call Us</strong></h5>
                             <p>+212 555 511 111</p>
                         </div>
                     </div>
@@ -630,8 +630,8 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p class="h5  text-center"><strong>Oumaima El Obayid</strong></p>
-            <p class="text-center  text-muted">
+            <p class="h5  text-center text-light"><strong>Oumaima El Obayid</strong></p>
+            <p class="text-center  text-muted ">
                 &copy; Oumcreation. All rights reserved.<br>Design - <a class="credit" href="https://oumcreation.com" target="_blank">Oumcreation</a>
             </p>
             <a href="#header" class="back-to-top"><img src="./public/images/arrow_up.png"></i>
