--- a/index.html
+++ b/index.html
@@ -629,10 +629,10 @@
                 <span><i class="fab fa-youtube"></i></span>
             </div>
         </div>
-        <div class="footer-bottom">
-            <p class="h5  text-center text-light"><strong>Oumaima El Obayid</strong></p>
-            <p class="text-center  text-muted ">
-                &copy; Oumcreation. All rights reserved.<br>Design - <a class="credit" href="https://oumcreation.com" target="_blank">Oumcreation</a>
+        <div class="footer-bottom text-center">
+            <strong class="h4 text-center text-light ">Oumaima El Obayid</strong>
+            <p class="text-center  text-muted  text-light">
+                <span class="h5"> &copy;</span> Oumcreation. All rights reserved.<br>Design - <a class="credit" href="https://oumcreation.com" target="_blank">Oumcreation</a>
             </p>
             <a href="#header" class="back-to-top"><img src="./public/images/arrow_up.png"></i>
             </a>
