--- a/index.html
+++ b/index.html
@@ -189,8 +189,7 @@
         <!-- ======= Skills Section ======= -->
         <!-- pour ajouter, supprimer ou modifier un skills ici, vous devez le faire aussi dans le fichier _skills.scss et le fichier main.js partie skills -->
         <section class="section" id="skills">
-
-            <div class="h4 text-center mb-4 title mt-4"><strong>Professional Skills</strong></div>
+            <div class="h3 text-center  mb-4 title mt-4 d-flex align-items-center justify-content-center"><strong>Professional Skills</strong></div>
             <div class="container card ">
                 <div class="flexrow justify-content-center  container-skills" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                     <ul class="skills-bar-container col-lg-6 col-md-6 col-sm-12">
@@ -296,7 +295,7 @@
 
         <!-- ======= Portfolio Section ======= -->
         <section class="section  portfolio lightbox" id="portfolio">
-            <div class="h4 text-center mb-4 title mt-4"><strong>Portfolio</strong></div>
+            <div class="h3 text-center  mb-4 title mt-4 d-flex align-items-center justify-content-center"><strong>Portfolio</strong></div>
             <div class="container card">
                 <div class="mt-4 row" data-aos="fade-in">
                     <div class="col-lg-12 d-flex justify-content-center">
@@ -416,7 +415,7 @@
 
         <!-- ======= experiences Section ======= -->
         <section class=" section" id="experiences">
-            <div class="h4 text-center mb-4 title mt-4 "><strong>Work Experience</strong></div>
+            <div class="h3 text-center  mb-4 title mt-4 d-flex align-items-center justify-content-center"><strong>Work Experience</strong></div>
             <div class="container ">
                 <div class=" mb-4 exper">
                     <div class="row">
@@ -479,7 +478,7 @@
 
         <!-- ======= Testimonials Section ======= -->
         <section class=" section testimonials section-bg" id="testimonials">
-            <div class="h4 text-center mb-4 title mt-4 "><strong>Testimonials</strong></div>
+            <div class="h3 text-center  mb-4 title mt-4 d-flex align-items-center justify-content-center"><strong>Testimonials</strong></div>
             <div class="container card ">
                 <div class="text-center mt-3" data-aos="fade-in" data-aos-delay="100">
                     <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
@@ -541,8 +540,7 @@
 
         <!-- ======= contact Section ======= -->
         <section class=" section contact section-bg" id="contact">
-            <div class="h4 text-center mb-4 title mt-4 "><strong>Let's Get In Touch</strong>
-            </div>
+            <div class="h3 text-center  mb-4 title mt-4 d-flex align-items-center justify-content-center"><strong>Let's Get In Touch</strong></div>
             <div class="container card pb-4">
                 <div class="section-title mt-3 text-center" data-aos="fade-in" data-aos-delay="100">
                     <p>Convinced to start an interview with us? Send us a message and we'll get back to you as soon as possible!
