--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
                     </div>
                     <div class="row col-lg-6 col-md-12 col-sm-12">
 
-                        <div class=" card-body col-12">
-                            <div class=" h4 mt-0 title"><strong>About</strong></div>
+                        <div class="shadow mt-3 mb-3 pb-0 card-body col-12">
+                            <div class=" h4  title"><strong>About</strong></div>
                             <p class="text-height-3">Hello! I am Oumaima El Obayid. Front End Developer, I’m a Front End Developer. I have a Passion for Creating Clean, Beautiful, Interactive, Minimalistic, Responsive and User Friendly UI, Developed by Modular, Scalable and Functional
                                 Code.
                             </p>
                         </div>
-                        <div class="card-body col-12 ">
-                            <div class="h4 mt-0 title"><strong>Basic Information</strong></div>
+                        <div class="basic_info shadow mb-3 pb-3 card-body col-12 ">
+                            <div class="h4  title"><strong>Basic Information</strong></div>
                             <div class="row p">
                                 <div class="col-sm-4"><strong class="text-uppercase">Name:</strong></div>
                                 <div class="col-sm-8">Oumaima El Obayid</div>
