--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     </div>
                     <div class="row col-lg-6 col-md-12 col-sm-12">
 
-                        <div class="shadow mt-3 mb-3 pb-0 card-body col-12">
+                        <div class="basic_info shadow mt-3 mb-3 pb-0 card-body col-12">
                             <div class=" h4  title"><strong>About</strong></div>
                             <p class="text-height-3">Hello! I am Oumaima El Obayid. Front End Developer, I’m a Front End Developer. I have a Passion for Creating Clean, Beautiful, Interactive, Minimalistic, Responsive and User Friendly UI, Developed by Modular, Scalable and Functional
                                 Code.
@@ -168,11 +168,11 @@
                             </div>
                             <div class="row p mt-2">
                                 <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-                                <div class="col-sm-8">+​212 537 71 90 00</div>
+                                <div class="col-sm-8">+​212 555 511 111</div>
                             </div>
                             <div class="row p mt-2">
                                 <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-                                <div class="col-sm-8">25, Daoudia, Marrakech, Maroc</div>
+                                <div class="col-sm-8">45, Boulevard Hassan II casablanca</div>
                             </div>
                             <div class="row p mt-2">
                                 <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
