--- a/index.html
+++ b/index.html
@@ -36,14 +36,12 @@
         <nav class="navbar navbar-expand-lg  ">
 
             <div class="container">
-                <a href="/" class="logo navbar-brand"></a>
+                <a href="#header" class="logo navbar-brand"></a>
                 <button class="navbar-toggler float-right custom-toggler collapsed " type="button" data-toggle="collapse" data-target="#navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse" id="navigation">
                     <ul class="navbar-nav ml-auto">
-                        <li class=" nav-item nav-item1"><a class="nav-link link1" href="#header">HOME</a>
-                        </li>
                         <li class=" nav-item nav-item2"><a class="nav-link link2" href="#about">ABOUT</a>
                         </li>
                         <li class=" nav-item nav-item3"><a class="nav-link link3" href="#skills">SKILLS</a>
@@ -628,7 +626,7 @@
             </div>
         </div>
         <div class="footer-bottom text-center">
-            <strong class="h4 text-center text-light ">Oumaima El Obayid</strong>
+            <strong class="h5 text-center text-light ">Oumaima El Obayid</strong>
             <p class="text-center  text-muted  text-light">
                 <span class="h5"> &copy;</span> Oumcreation. All rights reserved.<br>Design - <a class="credit" href="https://oumcreation.com" target="_blank">Oumcreation</a>
             </p>
