--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
                     </div>
                     <div class="row col-lg-6 col-md-12 col-sm-12">
 
-                        <div class="basic_info shadow mt-3 mb-3 pb-0 card-body col-12">
+                        <div class="shadow-card  mt-3 mb-3 pb-0 card-body col-12">
                             <div class=" h4  title"><strong>About</strong></div>
                             <p class="text-height-3">Hello! I am Oumaima El Obayid. Front End Developer, I’m a Front End Developer. I have a Passion for Creating Clean, Beautiful, Interactive, Minimalistic, Responsive and User Friendly UI, Developed by Modular, Scalable and Functional
                                 Code.
                             </p>
                         </div>
-                        <div class="basic_info shadow mb-3 pb-3 card-body col-12 ">
+                        <div class="shadow-card  mb-3 pb-3 card-body col-12 ">
                             <div class="h4  title"><strong>Basic Information</strong></div>
                             <div class="row p">
                                 <div class="col-sm-4"><strong class="text-uppercase">Name:</strong></div>
@@ -415,7 +415,7 @@
         <section class=" section" id="experiences">
             <div class="h3 text-center  mb-4 title mt-4 d-flex align-items-center justify-content-center"><strong>Work Experience</strong></div>
             <div class="container ">
-                <div class=" mb-4 exper">
+                <div class=" mb-4 shadow-card">
                     <div class="row">
                         <div class=" d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class=" card-body text-light align-middle ">
@@ -433,7 +433,7 @@
                         </div>
                     </div>
                 </div>
-                <div class=" mb-4 exper">
+                <div class=" mb-4 shadow-card">
                     <div class="row">
                         <div class=" d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class=" card-body text-light align-middle ">
@@ -450,7 +450,7 @@
                         </div>
                     </div>
                 </div>
-                <div class=" mb-4 exper">
+                <div class=" mb-4 shadow-card">
                     <div class="row">
                         <div class=" d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class=" card-body text-light align-middle ">
@@ -487,12 +487,12 @@
                         <img src="public/images/testimonials/testimonials-1.webp" class="testimonial-img" alt="">
                         <h3>Saul Goodman</h3>
                         <h4>Ceo &amp; Founder</h4>
-                        <p>
+                        <p class="shadow-card">
                             Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
                         </p>
                     </div>
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
-                        <p>
+                        <p class="shadow-card">
                             Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
                         </p>
                         <img src="public/images/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
@@ -503,12 +503,12 @@
                         <img src="public/images/testimonials/testimonials-3.webp" class="testimonial-img" alt="">
                         <h3>Jena Karlis</h3>
                         <h4>Store Owner</h4>
-                        <p>
+                        <p class="shadow-card">
                             Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
                         </p>
                     </div>
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
-                        <p>
+                        <p class="shadow-card">
                             Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
                         </p>
                         <img src="public/images/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
@@ -519,12 +519,12 @@
                         <img src="public/images/testimonials/testimonials-5.webp" class="testimonial-img" alt="">
                         <h3>John Larson</h3>
                         <h4>Entrepreneur</h4>
-                        <p>
+                        <p class="shadow-card">
                             Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
                         </p>
                     </div>
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
-                        <p>
+                        <p class="shadow-card">
                             Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
                         </p>
                         <img src="public/images/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
@@ -546,7 +546,7 @@
                 </div>
                 <div class="infos row" data-aos="fade-up" data-aos-delay="100">
                     <div class=" col-lg-6">
-                        <div class="shadow text-center mb-4 pt-3 pb-3">
+                        <div class="shadow-card text-center mb-4 pt-3 pb-3">
                             <p><i class="fas fa-map-marker-alt"></i></p>
                             <h5><strong> Address</strong></h5>
                             <p>45, Boulevard Hassan II casablanca</p>
@@ -554,14 +554,14 @@
                     </div>
 
                     <div class=" col-lg-3 col-md-6">
-                        <div class="shadow text-center mb-4 pt-3 pb-3">
+                        <div class="shadow-card text-center mb-4 pt-3 pb-3">
                             <p><i class="fas fa-at"></i></p>
                             <h5><strong>Email Us</strong></h5>
                             <p>Obayid@company.com</p>
                         </div>
                     </div>
                     <div class=" col-lg-3 col-md-6">
-                        <div class="shadow text-center mb-4 pt-3 pb-3">
+                        <div class="shadow-card text-center mb-4 pt-3 pb-3">
                             <p><i class="fas fa-phone-alt"></i></p>
                             <h5><strong>Call Us</strong></h5>
                             <p>+212 555 511 111</p>
@@ -570,7 +570,7 @@
                 </div>
                 <div class=" row" data-aos="fade-up" data-aos-delay="200">
                     <div class="col-lg-6">
-                        <form class="shadow col-12 pt-4 pt-4 mb-3" name="contact" action="public/php/mail.php" method="post">
+                        <form class="shadow-card col-12 pt-4 pt-4 mb-3" name="contact" action="public/php/mail.php" method="post">
                             <div class="form-row">
                                 <div class="input-icons col-md-6 form-group">
                                     <i class="far fa-user"></i>
@@ -593,7 +593,7 @@
                         </form>
                     </div>
                     <div class=" col-lg-6 ">
-                        <iframe class="shadow mb-4 mb-lg-0" src="https://maps.google.com/maps?q=45,%20Boulevard%20Hassan%20II%20casablanca&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+                        <iframe class="shadow-card mb-4 mb-lg-0" src="https://maps.google.com/maps?q=45,%20Boulevard%20Hassan%20II%20casablanca&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
                     </div>
 
                 </div>
