--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
         <!-- ======= About Section ======= -->
         <section class="section mt-4 mb-4" data-aos="fade-up" id="about">
             <div class="container ">
-                <div class="row flex-row   card " data-aos="fade-up" data-aos-offset="8">
-                    <div class="mt-5 col-lg-6 col-md-12 col-sm-12">
+                <div class="row flex-row justify-content-around card " data-aos="fade-up" data-aos-offset="8">
+                    <div class="mt-5 col-lg-6 col-md-12 col-sm-12 ">
                         <img class="img-fluid" src="public/images/about.png" alt="about me" />
                     </div>
-                    <div class="row col-lg-6 col-md-12 col-sm-12">
+                    <div class="row  col-lg-6 col-md-12 col-sm-12">
 
-                        <div class="shadow-card  mt-3 mb-3 pb-0 card-body col-12">
+                        <div class="shadow-card  mt-3 mb-3  card-body col-12">
                             <div class=" h4  title"><strong>About</strong></div>
                             <p class="text-height-3">Hello! I am Oumaima El Obayid. Front End Developer, I’m a Front End Developer. I have a Passion for Creating Clean, Beautiful, Interactive, Minimalistic, Responsive and User Friendly UI, Developed by Modular, Scalable and Functional
                                 Code.
