--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 
     <!-- font-awesome -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css'>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <!-- <link href="assets/vendor/venobox/venobox.css" rel="stylesheet"> -->
 
     <!-- Main CSS File -->
     <link href="public/css/main.css" rel="stylesheet">
@@ -58,15 +56,25 @@
                 </div>
             </div>
         </nav>
+    </header>
 
-        <div class="  parallax-wrapper">
+
+
+
+
+
+
+    <!-- ======= Main ======= -->
+    <main class="content ">
+        <!-- ======= profile section======= -->
+        <section class="profile  parallax-wrapper">
             <div class=" content-profile parallax">
                 <div class=" content-profile-center">
                     <div class="profile-img" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
                         <a href="#"><img src="public/images/avatar.png" alt="Image" /></a>
                     </div>
                     <span class="name" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">Oumaima El
-                        Obayid</span>
+                            Obayid</span>
                     <h3 class="category">Web integrator, Wordpress developer, and web designer
                     </h3>
                     <div class="container twoButtons">
@@ -100,14 +108,9 @@
                 </div>
 
             </div>
-        </div>
+        </section>
+        <!-- End profile Section -->
 
-
-
-    </header>
-
-    <!-- ======= Main ======= -->
-    <main class="content ">
         <!-- ======= Social Section ======= -->
         <section class="container">
             <div class="social container wrapper" id="social">
