--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <!-- ======= Header Section ======= -->
 
     <header id="header" class="section">
-        <!-- <nav class="navbar navbar-expand-lg  " > -->
-        <nav class="navbar navbar-expand-lg  ">
 
+        <!-- ======= navbar======= -->
+        <nav class="navbar navbar-expand-lg  ">
             <div class="container">
                 <a href="#header" class="logo navbar-brand"></a>
                 <button class="navbar-toggler float-right custom-toggler collapsed " type="button" data-toggle="collapse" data-target="#navigation">
@@ -55,6 +55,8 @@
                 </div>
             </div>
         </nav>
+        <!-- End navbar -->
+
         <!-- ======= profile section======= -->
         <section class="profile  parallax-wrapper">
             <div class=" content-profile parallax">
@@ -100,16 +102,10 @@
         </section>
         <!-- End profile Section -->
     </header>
-
-
-
-
-
-
+    <!-- End header -->
 
     <!-- ======= Main ======= -->
     <main class="content ">
-
 
         <!-- ======= Social Section ======= -->
         <section class="container">
@@ -188,11 +184,11 @@
         <!-- End About Section -->
 
         <!-- ======= Skills Section ======= -->
-        <!-- pour ajouter, supprimer ou modifier un skills ici, vous devez le faire aussi dans le fichier _skills.scss et le fichier main.js partie skills -->
+        <!-- to add, delete or modify a skills here, you must do it also in the _skills.scss or main.css file and the main.js file -->
         <section class="section" id="skills">
             <div class="h3 text-center  mb-4 title mt-4 d-flex align-items-center justify-content-center"><strong>Professional Skills</strong></div>
             <div class="container card ">
-                <div class="flexrow justify-content-center  container-skills" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                <div class="d-flex justify-content-center  container-skills" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                     <ul class="skills-bar-container col-lg-6 col-md-6 col-sm-12">
                         <li class=" col-12">
                             <div class="progressbar-title">
@@ -300,7 +296,7 @@
             <div class="container card">
                 <div class="mt-4 row" data-aos="fade-in">
                     <div class="col-lg-12 d-flex justify-content-center">
-                        <ul id="portfolio-menu">
+                        <ul class="mb-4 p-0" id="portfolio-menu">
                             <li data-filter="all" class="filterbtn filter-active">All</li>
                             <li data-filter="app" class="filterbtn">App</li>
                             <li data-filter="design" class="filterbtn">Design</li>
@@ -604,7 +600,11 @@
             </div>
         </section>
         <!-- End contact Section -->
+
     </main>
+    <!-- End main -->
+
+    <!-- ======= footer Section ======= -->
     <footer class="footer">
         <div class="container wrapper">
             <div class="icon facebook">
@@ -637,25 +637,18 @@
             </a>
         </div>
     </footer>
+    <!-- End footer -->
 
-
-    <!-- All script -->
+    <!-- ======= All scripts ======= -->
     <script src="public/vendors/jquery/jquery.min.js"></script>
     <script src="public/vendors/jquery/jquery.validate.min.js"></script>
     <script src="public/vendors/jquery/jquery.easing.min.js"></script>
-
     <script src="public/vendors/bootstrap/bootstrap.bundle.min.js"></script>
-
-    <!-- à supprimer en cas de non inutilité -->
     <script src="public/vendors/jquery/jquery.waypoints.min.js"></script>
     <script src="public/vendors/aos/aos-2.3.1.js"></script>
     <script src="public/vendors/owl.carousel/owl.carousel.min.js"></script>
     <script src="public/vendors/lightbox/lightbox.min.js"></script>
-
-
     <script src="public/js/main.js"></script>
-
-
 
 </body>
 
