--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
     <script src="public/vendors/jquery/jquery.validate.min.js"></script>
     <script src="public/vendors/jquery/jquery.easing.min.js"></script>
     <script src="public/vendors/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="public/vendors/jquery/jquery.waypoints.min.js"></script>
+    <script src="public/vendors/waypoints/waypoints.min.js"></script>
     <script src="public/vendors/aos/aos-2.3.1.js"></script>
     <script src="public/vendors/owl.carousel/owl.carousel.min.js"></script>
     <script src="public/vendors/lightbox/lightbox.min.js"></script>
