--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
-    <link href="public/vendors/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link href="public/vendors/owl.carousel/owl.carousel.min.css" rel="stylesheet">
-    <link href="public/vendors/aos/aos.css" rel="stylesheet">
-    <link href="public/vendors/lightbox/lightbox.min.css" rel="stylesheet" />
+    <link href="assets/vendors/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendors/owl.carousel/owl.carousel.min.css" rel="stylesheet">
+    <link href="assets/vendors/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendors/lightbox/lightbox.min.css" rel="stylesheet" />
     <!-- font-awesome -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css'>
 
     <!-- Main CSS File -->
-    <link href="public/css/main.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet">
 
 
 
@@ -62,7 +62,7 @@
             <div class=" content-profile parallax">
                 <div class=" content-profile-center">
                     <div class="profile-img" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
-                        <a href="#"><img src="public/images/avatar.png" alt="Image" /></a>
+                        <a href="#"><img src="assets/images/avatar.png" alt="Image" /></a>
                     </div>
                     <span class="name" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">Oumaima El
                             Obayid</span>
@@ -71,11 +71,11 @@
                     <div class="container twoButtons">
                         <div>
                             <a href="#contact">HIRE <br> ME </a>
-                            <img src="public/images/bubbleBtn.png" alt="contact" />
+                            <img src="assets/images/bubbleBtn.png" alt="contact" />
                         </div>
                         <div>
                             <a href="#">MY <br> CV</a>
-                            <img src="public/images/bubbleBtn.png" alt="cv" />
+                            <img src="assets/images/bubbleBtn.png" alt="cv" />
                         </div>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
             <div class="container ">
                 <div class="row flex-row justify-content-around card " data-aos="fade-up" data-aos-offset="8">
                     <div class="mt-5 col-lg-6 col-md-12 col-sm-12 ">
-                        <img class="img-fluid" src="public/images/about.png" alt="about me" />
+                        <img class="img-fluid" src="assets/images/about.png" alt="about me" />
                     </div>
                     <div class="row  col-lg-6 col-md-12 col-sm-12">
 
@@ -306,8 +306,8 @@
                 </div>
                 <div class="row  ">
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 app">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/1.webp" title="Project Name">
-                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/1.webp" alt="..." /> </a>
+                        <a class="portfolio-box" href="assets/images/portfolio/fullsize/1.webp" title="Project Name">
+                            <img class="img-fluid imgzoom" src="assets/images/portfolio/thumbnails/1.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between ">
                             <p class="ml-3 text-light ">projet-name</p>
                             <a class="mr-3" href="#">
@@ -316,8 +316,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 design">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/2.webp" title="Project Name">
-                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/2.webp" alt="..." /> </a>
+                        <a class="portfolio-box" href="assets/images/portfolio/fullsize/2.webp" title="Project Name">
+                            <img class="img-fluid imgzoom" src="assets/images/portfolio/thumbnails/2.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a class="mr-3" href="#">
@@ -326,8 +326,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 web">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/3.webp" title="Project Name">
-                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/3.webp" alt="..." /> </a>
+                        <a class="portfolio-box" href="assets/images/portfolio/fullsize/3.webp" title="Project Name">
+                            <img class="img-fluid imgzoom" src="assets/images/portfolio/thumbnails/3.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a class="mr-3" href="#">
@@ -337,8 +337,8 @@
 
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 app">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/4.webp" title="Project Name">
-                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/4.webp" alt="..." /> </a>
+                        <a class="portfolio-box" href="assets/images/portfolio/fullsize/4.webp" title="Project Name">
+                            <img class="img-fluid imgzoom" src="assets/images/portfolio/thumbnails/4.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a class="mr-3" href="#">
@@ -348,8 +348,8 @@
 
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 design">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/5.webp" title="Project Name">
-                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/5.webp" alt="..." /> </a>
+                        <a class="portfolio-box" href="assets/images/portfolio/fullsize/5.webp" title="Project Name">
+                            <img class="img-fluid imgzoom" src="assets/images/portfolio/thumbnails/5.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a class="mr-3" href="#">
@@ -359,8 +359,8 @@
 
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 web">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/6.webp" title="Project Name">
-                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/6.webp" alt="..." /> </a>
+                        <a class="portfolio-box" href="assets/images/portfolio/fullsize/6.webp" title="Project Name">
+                            <img class="img-fluid imgzoom" src="assets/images/portfolio/thumbnails/6.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a class="mr-3" href="#">
@@ -370,8 +370,8 @@
 
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 app">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/7.webp" title="Project Name">
-                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/7.webp" alt="..." /> </a>
+                        <a class="portfolio-box" href="assets/images/portfolio/fullsize/7.webp" title="Project Name">
+                            <img class="img-fluid imgzoom" src="assets/images/portfolio/thumbnails/7.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a class="mr-3" href="#">
@@ -381,8 +381,8 @@
 
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 design">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/8.webp" title="Project Name">
-                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/8.webp" alt="..." /> </a>
+                        <a class="portfolio-box" href="assets/images/portfolio/fullsize/8.webp" title="Project Name">
+                            <img class="img-fluid imgzoom" src="assets/images/portfolio/thumbnails/8.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a class="mr-3" href="#">
@@ -392,8 +392,8 @@
 
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 web">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/9.webp" title="Project Name">
-                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/9.webp" alt="..." /> </a>
+                        <a class="portfolio-box" href="assets/images/portfolio/fullsize/9.webp" title="Project Name">
+                            <img class="img-fluid imgzoom" src="assets/images/portfolio/thumbnails/9.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a class="mr-3" href="#">
@@ -483,7 +483,7 @@
                 </div>
                 <div class="mb-3 mt-3 owl-carousel owl-theme testimonials-carousel">
                     <div class="testimonial-item" data-aos="fade-up">
-                        <img src="public/images/testimonials/testimonials-1.webp" class="testimonial-img" alt="">
+                        <img src="assets/images/testimonials/testimonials-1.webp" class="testimonial-img" alt="">
                         <h3>Saul Goodman</h3>
                         <h4>Ceo &amp; Founder</h4>
                         <p class="shadow-card">
@@ -494,12 +494,12 @@
                         <p class="shadow-card">
                             Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
                         </p>
-                        <img src="public/images/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                        <img src="assets/images/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                         <h3>Sara Wilsson</h3>
                         <h4>Designer</h4>
                     </div>
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
-                        <img src="public/images/testimonials/testimonials-3.webp" class="testimonial-img" alt="">
+                        <img src="assets/images/testimonials/testimonials-3.webp" class="testimonial-img" alt="">
                         <h3>Jena Karlis</h3>
                         <h4>Store Owner</h4>
                         <p class="shadow-card">
@@ -510,12 +510,12 @@
                         <p class="shadow-card">
                             Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
                         </p>
-                        <img src="public/images/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                        <img src="assets/images/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                         <h3>Matt Brandon</h3>
                         <h4>Freelancer</h4>
                     </div>
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
-                        <img src="public/images/testimonials/testimonials-5.webp" class="testimonial-img" alt="">
+                        <img src="assets/images/testimonials/testimonials-5.webp" class="testimonial-img" alt="">
                         <h3>John Larson</h3>
                         <h4>Entrepreneur</h4>
                         <p class="shadow-card">
@@ -526,7 +526,7 @@
                         <p class="shadow-card">
                             Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
                         </p>
-                        <img src="public/images/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
+                        <img src="assets/images/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
                         <h3>John Larson</h3>
                         <h4>Entrepreneur</h4>
                     </div>
@@ -635,22 +635,22 @@
             <p class="text-center  text-muted  text-light">
                 <span class="h5"> &copy;</span> Oumcreation. All rights reserved.<br>Design - <a class="credit" href="https://oumcreation.com" target="_blank">Oumcreation</a>
             </p>
-            <a href="#header" class="back-to-top"><img src="./public/images/arrow_up.png"></i>
+            <a href="#header" class="back-to-top"><img src="./assets/images/arrow_up.png"></i>
             </a>
         </div>
     </footer>
     <!-- End footer -->
 
     <!-- ======= All scripts ======= -->
-    <script src="public/vendors/jquery/jquery.min.js"></script>
-    <script src="public/vendors/jquery/jquery.validate.min.js"></script>
-    <script src="public/vendors/jquery/jquery.easing.min.js"></script>
-    <script src="public/vendors/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="public/vendors/waypoints/waypoints.min.js"></script>
-    <script src="public/vendors/aos/aos-2.3.1.js"></script>
-    <script src="public/vendors/owl.carousel/owl.carousel.min.js"></script>
-    <script src="public/vendors/lightbox/lightbox.min.js"></script>
-    <script src="public/js/main.js"></script>
+    <script src="assets/vendors/jquery/jquery.min.js"></script>
+    <script src="assets/vendors/jquery/jquery.validate.min.js"></script>
+    <script src="assets/vendors/jquery/jquery.easing.min.js"></script>
+    <script src="assets/vendors/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendors/waypoints/waypoints.min.js"></script>
+    <script src="assets/vendors/aos/aos-2.3.1.js"></script>
+    <script src="assets/vendors/owl.carousel/owl.carousel.min.js"></script>
+    <script src="assets/vendors/lightbox/lightbox.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 
