--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
+    <!-- <link rel="icon" type="image/png" href="favicon.ico" /> -->
+    <link rel="icon" type="image/png" href="assets/images/favicon-blue.png" />
 
 
 
@@ -139,7 +141,7 @@
             <div class="container ">
                 <div class="row flex-row justify-content-around card " data-aos="fade-up" data-aos-offset="8">
                     <div class="mt-5 col-lg-6 col-md-12 col-sm-12 ">
-                        <img class="img-fluid" src="assets/images/about.png" alt="about me" />
+                        <img class="img-fluid " src="assets/images/about.png" alt="about me" />
                     </div>
                     <div class="row  col-lg-6 col-md-12 col-sm-12">
 
